[tool.poetry]
name = "genheas"
version = "0.1.0"
description = " genheas = Generate High Entropy Alloys(HEA) Strutures: a python packages using Neural Evolution approaches to gnerate HEA structure "
authors = ["Feugmo <giresse.feugmo@gmail.com>"]
readme ="README.rst"
homepage = ""
repository ="https://github.com/CLEANit/genheas"
documentation =  ""
keywords = [
    "High Entropy Alloys",
    "Evolutionary Algorithm",
    "Neural Network"
]
packages = [{includes = "tools/data/*.yml", from = "genheas"}]

[tool.poetry.dependencies]
python = "^3.6"

ase = "^3.21.1"
pymatgen = "*"
loguru = "^0.5.3"
pytorch = "^1.0.2"
pyaml = "^20.4.0"
clusterx = "^1.0.0-alpha.8"
sklearn ="*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^5.4.3"
pytest-cov = "^2.5"
pytest-mock = "^1.9"
pre-commit = { version = "^2.6", python = "^3.6.1" }
tox = "^3.0"
pytest-sugar = "^0.9.2"
httpretty = "^1.0"
zipp = { version = "^3.4", python = "<3.8"}
urllib3 = "1.25.10"

flake8 = "^3.8.4"
Sphinx = "^3.5.2"
doc8 = "^0.8.1"
coverage = "^5.5"
nose = "^1.3.7"
isort = "^5.7.0"
autopep8 = "^1.5.5"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "run:main"
#my-script = 'my_package:main'
genheas = "run:main"

[tool.poetry.urls]
issues = ""




[tool.flake8]
show-source = true
# E123, E125 skipped as they are invalid PEP-8.
# N802 skipped (function name should be lowercase)
# N806 skipped (variable in function should be lowercase)
# F401 skipped (imported but unused) after verifying current usage is valid
# W503 skipped line break before binary operator
# C901 skipped: 'MLaunchTool.init' is too complex
ignore = ["E123","E125","N802","N806","F401","W503","C901"]
select = ["B","C","E","F","W","T4","B9"]
skip_install = true
builtins = [" _"]
max-line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["poetry", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "poetry"
skip = ["genheas/tests/tests_files/*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.doc8]
max-line-length = 120
