[tool.poetry]
name = "genheas"
version = "0.1.0"
description = " genheas = Generate High Entropy Alloys(HEA) Strutures: a python packages using Neural Evolution approaches to gnerate HEA structure "
authors = ["Feugmo <giresse.feugmo@gmail.com>"]
readme ="README.rst"
homepage = ""
repository ="https://github.com/CLEANit/genheas"
documentation =  ""
keywords = [
    "High Entropy Alloys",
    "Evolutionary Algorithm",
    "Neural Network"
]
#packages = [{include = "genheas/tools/data/"},]
include = ["genheas/tools/data/"]

[tool.poetry.dependencies]
python = "^3.8"
pymatgen = "^2022.0.5"
ase = "^3.21.1"
torch = "^1.8.0"
pyaml = "^20.4.0"
loguru = "^0.5.3"
clusterX = "^1.0.0-alpha.8"
sklearn = "^0.0"
tqdm = "^4.60.0"
mendeleev = "^0.7.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
toc = "^0.0.11"
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
httpretty = "^1.0.5"
tox = "^3.23.0"
isort = "^5.8.0"
Sphinx = "^3.5.3"
doc8 = "^0.8.1"
coverage = "^5.5"
nose = "^1.3.7"
autopep8 = "^1.5.6"
urllib3 = "^1.26.4"
pre-commit = "^2.11.1"
#mypy = "^0.750.0"

#sphinx = { version = "^2.2", optional = true }
#sphinx_rtd_theme = { version = "^0.4.3", optional = true  }

flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
sphinx-rtd-theme = "^0.5.2"
sphinx-autoapi = "^1.8.1"
[tool.poetry.extras]

test = ["pytest"]
docs = ["sphinx", "sphinx_rtd_theme"]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
# run = "run:main"
#my-script = 'my_package:main'
genheas = "genheas:main"


[tool.poetry.urls]
issues = ""




[tool.flake8]
show-source = true
# E123, E125 skipped as they are invalid PEP-8.
# N802 skipped (function name should be lowercase)
# N806 skipped (variable in function should be lowercase)
# F401 skipped (imported but unused) after verifying current usage is valid
# W503 skipped line break before binary operator
# C901 skipped: 'MLaunchTool.init' is too complex
ignore = ["E123","E125","N802","N806","F401","W503","C901"]
select = ["B","C","E","F","W","T4","B9"]
skip_install = true
builtins = [" _"]
max-line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["poetry", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "poetry"
skip = ["genheas/tests/tests_files/*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.doc8]
max-line-length = 120
