[easy_install]
zip_ok = false

[aliases]
dev = develop easy_install pyHEA[testing]
docs = develop easy_install pyHEA[docs]

[metadata]
license_file = LICENSE.txt

[check-manifest]
ignore =
    .gitignore
    .gitattributes
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true
ignore-bad-ideas =
    tests/pkgs/localeapp/**/*.mo

[tool:pytest]
python_files = tests/test_*.py
testpaths =
    tests
addopts = -W always

[tool:pycodestyle]
max_line_length = 120

[tool:flake8]
show-source = true
# E123, E125 skipped as they are invalid PEP-8.
# N802 skipped (function name should be lowercase)
# N806 skipped (variable in function should be lowercase)
# F401 skipped (imported but unused) after verifying current usage is valid
# W503 skipped line break before binary operator
# C901 skipped: 'MLaunchTool.init' is too complex
ignore = E123,E125,N802,N806,F401,W503,C901
select = B,C,E,F,W,T4,B9
skip_install = True
builtins = _
exclude = hea/tests/tests_files/*,hea/training_data/,hea/tools/heatofmixing.py*,hea/tools/miedema.py,hea/tools/properties.py,hea/pyhea.py

[tool:isort]
skip = hea/tests/tests_files/*,hea/training_data/,hea/tools/heatofmixing.py*,hea/tools/miedema.py,hea/tools/properties.py,hea/pyhea.py
